--- a/src/style.css
+++ b/src/style.css
@@ -60,8 +60,8 @@ body {
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	width: 100%;
-	height: 100.5vh;
+	width: 100vw;
+	height: 100vh;
 }
 
 .talent-select-container {
@@ -134,12 +134,4 @@ body {
 .box {
 	padding: 30px;
 	box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.3);
-}
-
-.bottom-content {
-	z-index: 50;
-	height: 60vh;
-	background-color: rgb(95%, 95%, 95%, 90%);
-	border-top: 1px solid rgba(50%, 50%, 50%, 0.2);
-	padding: 50px;
 }
