--- a/src/style.css
+++ b/src/style.css
@@ -34,13 +34,13 @@ body {
 }
 
 .background {
+	background-image: url(""); /* set with javascript */
 	position: fixed;
 	top: 0px;
 	left: 0px;
 	width: 100%;
 	height: 100%;
 	z-index: -999999;
-	background-image: url("images/backgrounds/bg0.jpg");
 	background-repeat: no-repeat;
 	background-size: cover;
 	background-position: center;
