--- a/src/style.css
+++ b/src/style.css
@@ -140,3 +140,89 @@ body {
 	font-weight: 600;
 	letter-spacing: -0.02em;
 }
+
+.info-button {
+	position: fixed;
+	bottom: 0.5vh;
+	right: 0.5vw;
+	width: max(60px, 3vmax);
+	height: max(60px, 3vmax);
+	z-index: 1000;
+	cursor: pointer;
+	background-color: gray;
+	animation-name: info-button-anim;
+	animation-duration: 2s;
+	animation-iteration-count: infinite;
+	animation-timing-function: linear;
+	animation-play-state: paused;
+	backface-visibility: hidden; /* fixes flickering issue in firefox */
+}
+
+.info-button:hover {
+	animation-play-state: running;
+}
+
+.info {
+	position: fixed;
+	width: 700px;
+	height: 700px;
+	max-width: 90vw;
+	max-height: 90vh;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%) scale(1);
+	background-image: linear-gradient(rgba(100%, 100%, 100%, 1), rgba(90%, 90%, 90%, 1));
+	box-shadow: 0 0 7vmin rgba(0, 0, 0, 0.9);
+	border-radius: 10px;
+	visibility: hidden;
+	opacity: 0;
+	animation-fill-mode: forwards;
+}
+
+.info--in {
+	animation-name: info-in;
+	animation-duration: 0.2s;
+}
+
+.info--out {
+	animation-name: info-out;
+	animation-duration: 0.2s;
+}
+
+@keyframes info-in {
+	from {
+		visibility: visible;
+		opacity: 0;
+		transform: translate(-50%, -50%) scale(1.3);
+	}
+
+	to {
+		visibility: visible;
+		opacity: 1;
+		transform: translate(-50%, -50%) scale(1);
+	}
+}
+
+@keyframes info-out {
+	from {
+		opacity: 1;
+		visibility: visible;
+
+	}
+
+	to {
+		opacity: 0;
+		visibility: hidden;
+		transform: translate(-50%, -50%) scale(0.8);
+	}
+}
+
+@keyframes info-button-anim {
+	from {
+		transform: rotateZ(0deg);
+	}
+
+	to {
+		transform: rotateZ(360deg);
+	}
+}
