--- a/src/style.css
+++ b/src/style.css
@@ -31,6 +31,17 @@ body {
 	color: rgb(15%, 15%, 15%);
 }
 
+body::after { /* weird preload hack, thanks firefox */
+	position: fixed;
+	top: 0px;
+	left: 0px;
+	width: 1px;
+	height: 1px;
+	opacity: 0.00001;
+	z-index: -99999999;
+	content: url("images/info-button-animated.png"); /* urls here */
+}
+
 .background {
 	background-image: url(""); /* modified by js */
 	position: fixed;
@@ -145,7 +156,10 @@ body {
 	height: max(60px, 3vmax);
 	z-index: 1000;
 	cursor: pointer;
-	background-color: gray;
+	background-image: url("images/info-button.png");
+	background-repeat: no-repeat;
+	background-position: center;
+	background-size: contain;
 	animation-name: info-button-anim;
 	animation-duration: 2s;
 	animation-iteration-count: infinite;
@@ -156,6 +170,7 @@ body {
 
 .info-button:hover {
 	animation-play-state: running;
+	background-image: url("images/info-button-animated.png");
 }
 
 .info {
