add flex and margin-bottom to .talent-select-icons

--- a/src/style.css
+++ b/src/style.css
@@ -162,8 +162,10 @@ body::after {
 }
 
 .talent-select-icons {
+	display: flex;
 	font-size: 2em;
 	margin-top: 0.25em;
+	margin-bottom: 0.25em;
 	order: -1;
 }
 
