--- a/src/style.css
+++ b/src/style.css
@@ -150,15 +150,99 @@ body::after {
 	width: 100%;
 }
 
+.talent-select-image:hover {
+	cursor: pointer;
+}
+
 .talent-select-image__image {
-	border-radius: 8px;
+	display: block;
 	width: 100%;
+	border-radius: 8px;
+	user-select: none;
+}
+
+.talent-select-image__image.dropdown-enabled {
+	border-bottom-left-radius: 0px;
+	border-bottom-right-radius: 0px;
 }
 
 .talent-select-name {
 	min-height: 2.5em;
 	text-align: center;
 	font-weight: 500;
+	user-select: none;
+}
+
+.talent-select-name.dropdown-enabled {
+	visibility: hidden;
+}
+
+/* .talent-select-name__name {
+} */
+
+.talent-select-name__name:hover {
+	cursor: pointer;
+}
+
+.talent-dropdown {
+	position: relative;
+	align-self: start;
+	width: 100%;
+	visibility: hidden;
+	z-index: 500;
+}
+
+.talent-dropdown.dropdown-enabled {
+	visibility: visible;
+}
+
+.talent-dropdown-content {
+	position: absolute;
+	width: 100%;
+	background-image: linear-gradient(
+		rgba(95%, 95%, 95%, 0.9),
+		rgba(85%, 85%, 85%, 0.85)
+	);
+	z-index: 100;
+	border-bottom-left-radius: 8px;
+	border-bottom-right-radius: 8px;
+}
+
+.talent-dropdown-entries {
+	max-height: 25em;
+	overflow-y: auto;
+	margin-top: 0.5em;
+	margin-bottom: 0.5em;
+}
+
+.talent-dropdown-entries__entry {
+	display: flex;
+	align-items: center;
+	user-select: none;
+	padding: 0.2em;
+	padding-left: 0.4em;
+}
+
+.talent-dropdown-entries__entry:hover {
+	background-color: rgba(95%, 95%, 95%, 0.4);
+}
+
+.talent-dropdown-entries__entry--active {
+	background-color: rgba(100%, 100%, 100%, 0.6);
+}
+
+.talent-dropdown-entries__entry__image {
+	flex-shrink: 0;
+	border-radius: 0.2em;
+	width: 2.5em;
+	height: 2.5em;
+	margin-right: 0.4em;
+}
+
+.talent-dropdown-entries__entry__name {
+	overflow: hidden;
+	text-overflow: ellipsis;
+	font-size: 1em;
 }
 
 .talent-select-icons {
@@ -248,6 +332,7 @@ body::after {
 	background-color: whitesmoke;
 	box-shadow: 0 0 7vmin rgba(0, 0, 0, 0.9);
 	border-radius: 10px;
+	z-index: 900;
 }
 
 .info__inner {
@@ -383,6 +468,50 @@ body::after {
 
 	.talent-select-name {
 		font-size: 1.5em;
+	}
+
+	.talent-select-icons.dropdown-enabled {
+		visibility: hidden;
+	}
+
+	/* .talent-dropdown {
+	} */
+
+	.talent-dropdown-content {
+		background-color: unset;
+		background-image: linear-gradient(
+			rgba(100%, 100%, 100%, 0.5),
+			rgba(90%, 90%, 90%, 0.05)
+		);
+	}
+
+	.talent-dropdown-entries {
+		max-height: 15em;
+	}
+
+	.talent-dropdown-entries__entry {
+		padding: 0.2em;
+		padding-left: 0.8em;
+	}
+
+	.talent-dropdown-entries__entry--active {
+		background-color: unset;
+		background-image: linear-gradient(
+			90deg,
+			rgba(100%, 100%, 100%, 0.8) 2%,
+			transparent 2%
+		);
+	}
+
+	.talent-dropdown-entries__entry__image {
+		width: 2em;
+		height: 2em;
+		margin-right: 0.4em;
+	}
+
+	.talent-dropdown-entries__entry__name {
+		white-space: nowrap;
+		font-size: 1em;
 	}
 
 	.talent-select-icons {
