--- a/src/style.css
+++ b/src/style.css
@@ -47,7 +47,8 @@ body::after {
 }
 
 .background {
-	background-image: url(""); /* modified by js */
+	--image-url: url("");
+	background-image: var(--image-url);
 	position: fixed;
 	top: 0px;
 	left: 0px;
@@ -235,6 +236,8 @@ body::after {
 }
 
 .talent-dropdown-entries__entry__image {
+	--image-url: url("");
+	background-image: var(--image-url);
 	flex-shrink: 0;
 	border-radius: 0.2em;
 	width: 2.5em;
