--- a/src/style.css
+++ b/src/style.css
@@ -292,6 +292,10 @@ body::after {
 	border-radius: 8px;
 	width: 100%;
 	background-color: white;
+	background-image: url("images/loading-indicator.webp");
+	background-position: center;
+	background-repeat: no-repeat;
+	background-size: 40%;
 }
 
 .result-icons {
