--- a/src/style.css
+++ b/src/style.css
@@ -372,17 +372,19 @@ body::after {
 	left: 50%;
 	transform: translate(-50%, -50%) scale(1);
 	padding: 0.6em;
-	padding-top: 2em;
+	padding-top: 2.2em;
 	background-color: whitesmoke;
 	box-shadow: 0 0 7vmin rgba(0, 0, 0, 0.9);
 	border-radius: 10px;
 	z-index: 900;
+	color: rgb(10%, 10%, 10%);
 }
 
 .info__inner {
 	width: 100%;
 	max-height: 60vh;
 	overflow: auto;
+	padding-bottom: 1em;
 }
 
 .info__close {
@@ -403,6 +405,49 @@ body::after {
 
 .info__close:hover {
 	cursor: pointer;
+}
+
+.info h1:not(:nth-child(1)) {
+	margin-top: 0.8em;
+}
+
+.info .background-button {
+	border-radius: 0.3em;
+	padding: 0.7em 0.8em;
+	border: 1px solid rgba(0, 0, 0, 0.2);
+	margin: 0.5em 0.1em;
+	margin-bottom: 0;
+	background-color: inherit;
+	font-weight: bold;
+}
+
+.info .background-button:hover {
+	background-color: rgb(90%, 90%, 90%);
+}
+
+.info .background-button:active {
+	background-color: rgb(85%, 85%, 85%);
+}
+
+.info ul {
+	padding-left: 1.3em;
+}
+
+.info ul ul {
+	padding-left: 1em;
+}
+
+.info li {
+	line-height: 1.3em;
+}
+
+.info li li {
+	list-style-type: "–  ";
+}
+
+.info a {
+	color: rgb(30%, 30%, 30%);
+	font-weight: bold;
 }
 
 .info--in {
@@ -605,5 +650,14 @@ body::after {
 
 	.info {
 		max-width: 60ch;
+		padding-left: 1em;
+	}
+
+	.info ul {
+		padding-left: 1.7em;
+	}
+
+	.info ul ul {
+		padding-left: 1.4em;
 	}
 }
