--- a/src/style.css
+++ b/src/style.css
@@ -642,6 +642,11 @@ body::after {
 
 	.result-name {
 		font-size: 2.5em;
+		min-height: 2.4em;
+	}
+
+	.result-button-imgs {
+		margin-top: 0;
 	}
 
 	.info {
