--- a/src/style.css
+++ b/src/style.css
@@ -306,7 +306,8 @@ body::after {
 	background-repeat: no-repeat;
 	background-size: 40%;
 	animation-name: result-canvas-loading-delay;
-	animation-duration: 0.15s;
+	animation-duration: 0.2s;
+	animation-timing-function: linear;
 	animation-fill-mode: forwards;
 }
 
@@ -503,11 +504,15 @@ body::after {
 }
 
 @keyframes result-canvas-loading-delay {
-	from {
+	0% {
 		background-image: url("");
 	}
 
-	to {
+	99% {
+		background-image: url(""); /* firefox fix */
+	}
+
+	100% {
 		background-image: url("images/loading-indicator.webp");
 	}
 }
