--- a/src/style.css
+++ b/src/style.css
@@ -46,6 +46,10 @@ body::after {
 	content: url("images/info-button-animated.webp");
 }
 
+button {
+	outline: none;
+}
+
 .background {
 	--image-url: url("");
 	background-image: var(--image-url);
