--- a/src/style.css
+++ b/src/style.css
@@ -92,14 +92,14 @@ button {
 	background-repeat: no-repeat;
 	background-position: center;
 	background-size: contain;
-	width: 1.3em;
-	height: 1.3em;
+	width: 2.6em;
+	height: 2.6em;
 	filter:
 		drop-shadow(0 0 0.25em rgba(5%, 5%, 5%, 0.3))
 		drop-shadow(0 0 0.05em rgba(5%, 5%, 5%, 0.6))
 	;
-	margin-left: 0.1em;
-	margin-right: 0.1em;
+	margin-left: 0.2em;
+	margin-right: 0.2em;
 }
 
 .button-img:hover {
@@ -286,7 +286,6 @@ button {
 
 .talent-select-button-imgs {
 	display: flex;
-	font-size: 2em;
 }
 
 .talent-select-button-imgs.dropdown-visible {
@@ -321,7 +320,11 @@ button {
 	justify-content: center;
 	align-items: center;
 	width: 100%;
-	font-size: 2.6em;
+}
+
+.result-button-imgs .button-img {
+	width: 3.1em;
+	height: 3.1em;
 }
 
 .result-button-imgs__screenshot {
@@ -626,10 +629,10 @@ button {
 	}
 
 	.button-img {
-		width: 1.2em;
-		height: 1.2em;
-		margin-left: 0.05em;
-		margin-right: 0.05em;
+		width: 2.4em;
+		height: 2.4em;
+		margin-left: 0.15em;
+		margin-right: 0.15em;
 	}
 
 	.result-box {
@@ -637,6 +640,11 @@ button {
 		flex-basis: 100%;
 		flex-grow: 1;
 		margin: auto 2em;
+	}
+
+	.result-button-imgs .button-img {
+		width: 3em;
+		height: 3em;
 	}
 
 	.result-name {
