simplify .main by using inset

--- a/src/style.css
+++ b/src/style.css
@@ -559,10 +559,7 @@ button {
 
 	.main {
 		position: absolute;
-		top: 0;
-		left: 0;
-		right: 0;
-		bottom: 0;
+		inset: 0;
 		flex-wrap: nowrap;
 		justify-content: center;
 		align-items: center;
