add margin-bottom to .talent-select-image and .result-canvas on long mobile screens and desktop

--- a/src/style.css
+++ b/src/style.css
@@ -529,9 +529,17 @@ button {
 		flex-basis: 48%;
 	}
 
+	.talent-select-image {
+		margin-bottom: 3px;
+	}
+
 	.result-box {
 		flex-basis: 80%;
 		margin-top: 1em;
+	}
+
+	.result-canvas {
+		margin-bottom: 3px;
 	}
 }
 
@@ -598,6 +606,10 @@ button {
 		transform: rotateY(calc(var(--perspective-angle) * -1));
 	}
 
+	.talent-select-image {
+		margin-bottom: 4px;
+	}
+
 	.talent-select-image:hover {
 		filter: brightness(1.08);
 	}
@@ -655,6 +667,10 @@ button {
 		flex-basis: 100%;
 		flex-grow: 1;
 		margin: auto 2em;
+	}
+
+	.result-canvas {
+		margin-bottom: 4px;
 	}
 
 	.result-button-imgs .button-img {
